configs/kube_configs/alert-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: alert-bot
  name: alert-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alert-bot
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/medok-network: "true"
        io.kompose.service: alert-bot
    spec:
      containers:
        - image: lorien/incaller-prometheus-telegram-bot
          name: medok-alert-bot
          ports:
            - containerPort: 9087
          resources: {}
          volumeMounts:
            - mountPath: /etc/telegrambot/
              name: alert-bot-claim0
            - mountPath: /config.yaml
              name: alert-bot-claim1
      restartPolicy: Always
      volumes:
        - name: alert-bot-claim0
          hostPath:
            path: /configs/telegrambot/
        - name: alert-bot-claim1
          hostPath:
            path: /configs/telegrambot/config.yaml
status: {}
