configs/kube_configs/alertmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: alertmanager
  name: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: alertmanager
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/medok-network: "true"
        io.kompose.service: alertmanager
    spec:
      containers:
        - args:
            - --config.file=/etc/alertmanager/config.yml
            - --storage.path=/alertmanager
          image: prom/alertmanager
          name: medok-alertmanager
          ports:
            - containerPort: 9093
          resources: {}
          volumeMounts:
            - mountPath: /etc/alertmanager/config.yml
              name: alertmanager-claim0
      restartPolicy: Always
      volumes:
        - name: alertmanager-claim0
          hostPath:
            path: /configs/alertmanager/config.yml
status: {}
