configs/kube_configs/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/medok-network: "true"
        io.kompose.service: grafana
    spec:
      containers:
        - image: grafana/grafana
          name: medok-grafana
          ports:
            - containerPort: 3000
          resources: {}
      hostname: grafana
      restartPolicy: Always
status: {}
