configs/kube_configs/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: loki
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loki
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/medok-network: "true"
        io.kompose.service: loki
    spec:
      containers:
        - args:
            - -config.file=/etc/loki/config.yaml
          image: grafana/loki:2.5.0
          name: medok-loki
          ports:
            - containerPort: 3100
          resources: {}
          volumeMounts:
            - mountPath: /etc/loki/config.yaml
              name: loki-claim0
      restartPolicy: Always
      volumes:
        - name: loki-claim0
          hostPath:
            path: /configs/loki/config.yaml
status: {}
