configs/kube_configs/medok-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: medok-database
  name: medok-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: medok-database
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/medok-network: "true"
        io.kompose.service: medok-database
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: medok
            - name: POSTGRES_USER
              value: medok
          image: postgres
          name: medok-database
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
