configs/kube_configs/medok-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: medok
  name: medok
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: medok
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/medok-network: "true"
        io.kompose.service: medok
    spec:
      containers:
        - env:
            - name: JDBC_DATABASE_PASSWORD
              value: medok
            - name: JDBC_DATABASE_URL
              value: jdbc:postgresql://medok-database:5432/medok
            - name: JDBC_DATABASE_USERNAME
              value: medok
          image: ghcr.io/samurai9/medok-spring:main
          name: medok
          ports:
            - containerPort: 8080
          resources: {}
          volumeMounts:
            - mountPath: /logs/
              name: logs-volume
      restartPolicy: Always
      volumes:
        - name: logs-volume
          persistentVolumeClaim:
            claimName: logs-volume
status: {}
