configs/kube_configs/node-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: node-exporter
  name: node-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node-exporter
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/medok-network: "true"
        io.kompose.service: node-exporter
    spec:
      containers:
        - image: quay.io/prometheus/node-exporter
          name: medok-node-exporter
          ports:
            - containerPort: 9100
          resources: {}
      hostname: node-exporter
      restartPolicy: Always
status: {}
