configs/kube_configs/prometheus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: prometheus
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/medok-network: "true"
        io.kompose.service: prometheus
    spec:
      containers:
        - image: prom/prometheus
          name: medok-prometheus
          ports:
            - containerPort: 9090
          resources: {}
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-claim0
            - mountPath: /etc/prometheus/alertmanager/rules/
              name: prometheus-claim1
      hostname: prometheus
      restartPolicy: Always
      volumes:
        - name: prometheus-claim0
          hostPath:
            path: /configs/prometheus/prometheus.yaml
        - name: prometheus-claim1
          hostPath:
            path: /configs/alertmanager/rules/
status: {}
