configs/kube_configs/alert-bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: alert-bot
  name: alert-bot
spec:
  ports:
    - name: "9087"
      port: 9087
      targetPort: 9087
  selector:
    io.kompose.service: alert-bot
status:
  loadBalancer: {}
