configs/kube_configs/medok-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: medok
  name: medok
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  type: LoadBalancer
  selector:
    io.kompose.service: medok
status:
  loadBalancer: {}
